Fixing IE layout issues, yay

--- a/source/app/NOS.Wiki/Themes/NOS/hacks/IE.css
+++ b/source/app/NOS.Wiki/Themes/NOS/hacks/IE.css
@@ -102,5 +102,5 @@ table td * {
 
 table td span.prefix {
 	position: relative;
-	top: 4px;
+	top: 5px;
 }
